# image-library

./: Makefile  README.md
.github/workflows/: build.yml
builder/: Dockerfile  Makefile  build_img.sh  create_rootfs.sh
images/base/: Dockerfile  Makefile
images/base/profile.d/: depot-toolchain.sh  prompt.sh
images/base/wallpapers/: generate.py
images/desktop/: Dockerfile  Makefile  docker-compose.yml  run.json
images/desktop/config/: supervisord.conf
images/desktop/config/chrome-policies/: managed.json
images/desktop/config/dconf/db/local.d/: 00-plank-theme
images/desktop/config/xfce4/xfconf/xfce-perchannel-xml/: xfce4-desktop.xml  xfce4-panel.xml  xfce4-power-manager.xml  xfce4-screensaver.xml  xfwm4.xml  xsettings.xml
images/desktop/proxy/: Cargo.toml
images/desktop/proxy/src/: main.rs
images/desktop/scripts/: entrypoint.sh  setup-vnc.sh  websockify-fork.py
images/ubuntu/: Dockerfile  Makefile  id_ed25519  id_ed25519.pub
images/workstation/: Dockerfile  Makefile
