[package]
name = "desktop-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "desktop-proxy"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tower-http = { version = "0.5", features = ["fs"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
